--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="js/app.js"></script>
     <script>
         if(navigator.serviceWorker){
-           navigator.serviceWorker.register('https://github.com/EvelynBahena7u7/PWA-Practica8/sw.js');
+           navigator.serviceWorker.register('https://evelynbahena7u7.github.io/PWA-Practica8/sw.js');
         }
     </script>
 </body>
