--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="js/camera.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://evelynbahena7u7.github.io/PWA-Practica8/js/camera.js"></script>
+    <script src="https://evelynbahena7u7.github.io/PWA-Practica8/js/app.js"></script>
     <script>
         if(navigator.serviceWorker){
            navigator.serviceWorker.register('https://evelynbahena7u7.github.io/PWA-Practica8/sw.js');
